--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
             <h1 class="display-1 hero-title slider-reveal">
               Mejor Sabor <br>
-              Mejores Ingredientess 
+              Mejores Ingredientes
             </h1>
 
             <p class="body-2 hero-text slider-reveal">
@@ -1206,7 +1206,7 @@ papas fritas y ensalada fresca
 
           <div class="form reservation-form bg-black-10">
 
-            <form action="https://formsubmit.co/jelow0413@gmail.com" method="POST"" class="form-left">
+            <form action="https://formsubmit.co/jelow0413@gmail.com" method="POST" class="form-left">
 
               <h2 class="headline-1 text-center">Reservacion en linea</h2>
               <p class="form-text text-center">
