--- a/index.html
+++ b/index.html
@@ -1260,7 +1260,7 @@ papas fritas y ensalada fresca
                 <span class="text text-2" aria-hidden="true">Reservar una mesa
                 </span>
               </button>
-              <input type="hidden" name="_next" value="http://127.0.0.1:5500/index.html?email_address=#://local">
+              <input type="hidden" name="_next" value="https://anderson0421.github.io/restaurante/">
               <input type="hidden" name="_captcha" value="false">
 
             </form>
@@ -1491,12 +1491,13 @@ papas fritas y ensalada fresca
 
           <p class="title-1">Obten Noticas y Ofertas</p>
 
-
-          <form action="" class="input-wrapper">
+          <form action="https://formsubmit.co/jelow0413@gmail.com" method="POST"" class="input-wrapper">
+        
+          
             <div class="icon-wrapper">
               <ion-icon name="mail-outline" aria-hidden="true"></ion-icon>
 
-              <input type="email" name="email_address" placeholder="Tu correo" autocomplete="off" class="input-field">
+              <input type="email"  name="name" placeholder="Tu correo" autocomplete="off" class="input-field">
             </div>
 
             <button type="submit" class="btn btn-secondary">
@@ -1504,6 +1505,8 @@ papas fritas y ensalada fresca
 
               <span class="text text-2" aria-hidden="true">Suscribete</span>
             </button>
+            <input type="hidden" name="_next" value="https://anderson0421.github.io/restaurante/">
+            <input type="hidden" name="_captcha" value="false">
           </form>
 
         </div>
