--- a/index.html
+++ b/index.html
@@ -1579,7 +1579,7 @@ papas fritas y ensalada fresca
   <a href="#top" class="back-top-btn active" aria-label="back to top" data-back-top-btn>
     <ion-icon name="chevron-up" aria-hidden="true"></ion-icon>
   </a>
-  <a href="https://wa.me/941166905" target="_blank" class="whatsapp-btn" >
+  <a href="https://wa.me/+51952909750" target="_blank" class="whatsapp-btn" >
     <i class="fab fa-whatsapp"></i>
   </a>
   
