--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- 
-    - primary meta tags
+    - etiquetas meta primarias
   -->
   <title>3 Leñas  Chicken Grill</title>
   <meta name="title" content="3 Leñas">
@@ -31,7 +31,7 @@
   <link rel="stylesheet" href="./assets/css/style.css">
 
   <!-- 
-    - preload images
+    - Imágenes de precarga
   -->
   <link rel="preload" as="image" href="./assets/images/hero-slider-1.jpg">
   <link rel="preload" as="image" href="./assets/images/hero-slider-2.jpg">
@@ -42,7 +42,7 @@
 
 <body id="top">
   <!-- 
-    - #PRELOADER
+    - PRECARGADOR
   -->
 
   <div class="preload" data-preaload>
@@ -54,10 +54,13 @@
 
 
   <!-- 
-    - #TOP BAR
+    - #BARRA SUPERIOR
+
   -->
   
-
+  <!-- 
+    -Todos los botones e informacion de contacto en una especie de barra de navegacion
+  -->
   <div class="topbar">
     <div class="container">
       <a href="https://wa.me/+51952909750" target="_blank"><ion-icon name="logo-whatsapp" style="color: greenyellow;"></ion-icon></a>
@@ -72,6 +75,9 @@
           Av. Santa Mercedes N° 308, 1era Etapa Palao S.M.P
         </span>
       </address>
+      <!-- 
+        - usamos el separator para separar los links con un icono
+        -->
 
       <div class="separator"></div>
 
@@ -94,7 +100,7 @@
       </a>
 
       <div class="separator"></div>
-
+      
       <a href="mailto:booking@restaurant.com" class="topbar-item link">
         <div class="icon">
           <ion-icon name="mail-outline" aria-hidden="true"></ion-icon>
@@ -111,7 +117,7 @@
   </div>
 
   <!-- 
-    - #HEADER
+    - #ENCABEZAMIENTO // HEADER
   -->
 
   <header class="header" data-header>
@@ -1455,7 +1461,8 @@ papas fritas y ensalada fresca
 
 
   <!-- 
-    - #FOOTER
+    - #FOOTER  - PIE DE PÁGINA
+
   -->
 
   <footer class="footer section has-bg-image text-center" id="contact1"
@@ -1571,7 +1578,8 @@ papas fritas y ensalada fresca
 
 
   <!-- 
-    - #BACK TO TOP
+    - #BACK TO TOP / VOLVER ARRIBA
+
   -->
   
   
