--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
   <!-- 
     - Imágenes de precarga
   -->
-  <link rel="preload" as="image" href="./assets/images/hero-slider-1.jpg">
-  <link rel="preload" as="image" href="./assets/images/hero-slider-2.jpg">
-  <link rel="preload" as="image" href="./assets/images/hero-slider-3.jpg">
+  <link rel="preload" as="image" href="./assets/images/pollo-3.jpg">
+  <link rel="preload" as="image" href="./assets/images/parrilla.jpg">
+  <link rel="preload" as="image" href="./assets/images/mostrito.png">
 
 
 </head>
